--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -15,6 +15,12 @@
           <li class="nav-item">
             <%= link_to 'New Blog', new_blog_path %>
           </li>
+          <li class="nav-item">
+            <%= link_to 'サインアップ', new_user_path %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'ログイン', new_session_path %>
+          </li>
         </ul>
       </div>
     </div>
