--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,5 +10,18 @@
   <%= @blog.content %>
 </p>
 
+<br>
+
+<div class="button"><%= link_to "編集", edit_blog_path(@blog.id), data: { confirm: '本当に編集していいですか？' }, class: 'btn btn-primary' %></div>
+<div class="button"><%= link_to '削除', blog_path(@blog.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }, class: 'btn btn-primary' %></div>
+
+<% unless @blog.user_id == current_user.id %>
+  <% if @favorite.present? %>
+    <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'お気に入りする', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-primary' %>
+  <% end %>
+<% end %>
+<br>
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
 <%= link_to 'Back', blogs_path %>
