--- a/app/assets/stylesheets/clean-blog.css
+++ b/app/assets/stylesheets/clean-blog.css
@@ -3,6 +3,9 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/LICENSE)
  */
+.favorites{
+   text-align: center;
+}
 
 body {
   font-size: 20px;
