--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -47,6 +47,7 @@
             <h3 class="post-subtitle">
               <%= blog.content %>
             </h3>
+            <h3>投稿者<%= blog.user.name %></h3>
           </a>
           <p class="post-meta"><%= blog.created_at %></p>
         </div>
